tests/rules/unused-export/valid-namespace-import/lib.ts
export const LIMIT = 10;

export type Shape = { id: string };

export function helper(): number {
  return LIMIT + 1;
}
